# magic-content-engine

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bullpen.bat  go.mod  pyproject.toml
.kiro/steering/: 01-niche-and-voice.md  02-research-sources.md  03-output-blog-post.md  04-output-youtube.md  05-output-talks.md  06-model-routing-and-bundle.md
cmd/bullpen-console/: main.go
docs/: infrastructure.md
docs/agents/: domain.md  issue-tracker.md  project-board.md  ship-style.md  triage-labels.md
docs/iam-policies/: archivist-policy.json  desk-editor-policy.json  editor-in-chief-policy.json  publisher-policy.json  researcher-policy.json  subeditor-policy.json  writer-policy.json
docs/mockups/: bullpen-console-redesign.html
internal/desktop/: browser.go  desktop_test.go  port.go  port_test.go  tray.go
internal/devto/: publisher.go  publisher_test.go
internal/files/: safepath_internal_test.go  service.go  service_test.go
internal/run/: decision.go  decision_test.go  manager.go  (+3 more)
magic_content_engine/: __init__.py  __main__.py  bundle.py  citation.py  config.py  crawler.py  deduplication.py  dependencies.py  embargo.py  engagement.py  errors.py  gateway.py  identity.py  memory.py  metadata.py  model_router.py  models.py  observability.py  orchestrator.py  publish_gate.py  s3_upload.py  scoring.py  screenshots.py  slug.py  steering.py  test_bullpen_approval_gate.py  test_bullpen_archivist.py  test_bullpen_desk_editor.py  test_bullpen_editor_in_chief.py  test_bullpen_eventbridge.py  test_bullpen_iam_policies.py  test_bullpen_publisher.py  test_bullpen_researcher.py  test_bullpen_subeditor.py  test_bullpen_web_gui.py  test_bullpen_writer.py  test_bundle.py  test_citation.py  test_control_file_gate.py  test_control_file_gate_property.py  (+30 more)
scripts/: README.md  create_infrastructure.py  make_icon_and_shortcut.py  run_gui.py  run_headless.py  run_local.py  sync-vault-to-s3.ps1
web/: embed.go
(+61 files in other folders)
